# minlogrs

./: .gitignore  Cargo.toml  Makefile  README.md  flake.nix  test.mlg
src/lib/: builtin.rs  core.rs  frontend.rs  includes.rs  lib.rs  proof_generation.rs  utils.rs
src/lib/builtin/: elimination.rs  totality.rs
src/lib/core/: formulas.rs  polarity.rs  predicates.rs  proofs.rs  structures.rs  substitution.rs  terms.rs  types.rs
src/lib/core/formulas/: all_quantifier.rs  implication.rs  minlog_formula.rs  prime_formula.rs
src/lib/core/predicates/: all_quantifier.rs  comprehension_term.rs  implication.rs  inductive_predicate.rs  minlog_predicate.rs  predicate_constant.rs  predicate_substitution.rs  predicate_variable.rs  predicate_wildcard.rs  prime_formula.rs
src/lib/core/proofs/: assumption.rs  axiom.rs  bundled_proof.rs  goal.rs  implication_elim.rs  implication_intro.rs  minlog_proof.rs  proof_context.rs  proof_substitution.rs  proof_wildcard.rs  theorem.rs  universal_elim.rs  universal_intro.rs
src/lib/core/structures/: algebra.rs  inductive_constant.rs  program_constant.rs
src/lib/core/terms/: abstraction.rs  application.rs  constructor.rs  match_term.rs  minlog_term.rs  program_term.rs  projection.rs  term_substitution.rs  term_variable.rs  term_wildcard.rs  tuple.rs
src/lib/frontend/: lexing.rs  parsing.rs  source_management.rs
src/lib/proof_generation/: by_assume.rs  by_elim.rs  by_intro.rs  by_use.rs
src/lib/utils/: indirect_ref.rs  pretty_printer.rs  proof_tree_display.rs  wrapper_enum.rs
src/macros/wrapper_enum/: Cargo.toml
(+18 files in other folders)
