[package]
name = "minlogrs"
version = "0.1.0"
authors = ["Minlog Developers"]
edition = "2024"
rust-version = "1.89"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = {version = "4.5", features = ["derive"]}
itertools = "0.14"
log = "0.4"
nom = "8.0"
rand = "0.9"
serde = "1.0"
serde_json = "1.0"
paste = "1.0"

[dev-dependencies]
criterion = { version = "0.7" , features = ["html_reports"] }

[lib]
name = "lib"
path = "src/lib/lib.rs"

[[bin]]
name = "minlogrs"
path = "src/bin/main.rs"

[[bench]]
name = "fibonacci"
harness = false
