[package]
name = "minlogrs"
version = "0.1.0"
authors = ["Minlog Developers"]
edition = "2024"
rust-version = "1.89"
license = "MIT"

[dependencies]
paste = "1.0"
indexmap = "2.12.0"
wrapper_enum = { path = "src/macros/wrapper_enum" }

[lib]
name = "lib"
path = "src/lib/lib.rs"

[[bin]]
name = "minlogrs"
path = "src/bin/main.rs"